# kodi

./: .gitignore  CMakeLists.txt
Assets/Dodger/: Fallin-Down-Enemy.pyxel  Falling-Down-Player.pyxel
Assets/Textures/: selector.pyxel
Game/: CMakeLists.txt  DodgerGame.cpp  Game.cpp  MemoryPuzzle.h  Metagame.cpp  Metagame.h  TetrisBlock.cpp  TetrisBlock.h  TetrisGame.cpp  TetrisGame.h  TetrisSprite.cpp  TetrisSprite.h  main.cpp
Game/Shaders/: CMakeLists.txt  static.frag  static.vert
Source/: CMakeLists.txt  Kodi.h  KodiConfig.h.in  Notes  TileLayer.cpp  TileLayer.h  main.cpp
Source/Graphics/: BatchRenderer2D.cpp  BatchRenderer2D.h  BathRenderer2D.cpp  CMakeLists.txt  Label.cpp  Label.h  Layer.cpp  Layer.h  Renderable2D.cpp  Renderable2D.h  Renderer2D.h  Shader.cpp  Shader.h  Simple2DRenderer.cpp  Simple2DRenderer.h  Sprite.h  StaticSprite.cpp  StaticSprite.h  Texture.cpp  Texture.h  TileLayer.cpp  TileLayer.h  Window.cpp  Window.h
Source/Graphics/Buffers/: Buffer.cpp  Buffer.h  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h
Source/Graphics/Layers/: CMakeLists.txt  Group.cpp  Group.h  Layer.cpp  Layer.h  Menu.cpp  Menu.h  TileLayer.cpp  TileLayer.h
Source/Graphics/Renderables/: CMakeLists.txt  Renderable2D.cpp  Renderable2D.h  Sprite.cpp  Sprite.h  StaticSprite.cpp  StaticSprite.h
Source/Graphics/Renderers/: BatchRenderer2D.cpp  BatchRenderer2D.h  CMakeLists.txt  Renderer2D.h  Simple2DRenderer.cpp  Simple2DRenderer.h
Source/Math/: CMakeLists.txt  Math.h  mat4.cpp  mat4.h  mathUtils.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
Source/Shaders/: CMakeLists.txt  basic.frag  basic.vert  batchTexture.frag  batchTexture.vert  text.frag  text.vert
Source/Utils/: Allocator.cpp  Allocator.h  CMakeLists.txt  GeneralUtils.h  Timer.h  fileUtils.h  newOverride.h
librarybinaries/: CMakeLists.txt
